# Computer-Vision-exercises

./: .gitignore  README.md  pyproject.toml
background_subtraction/: background_subtraction.py  count_people.py
edges/: canny_edge_detector.py  distance_transform.py  hough_transform_mean_shift.py
filtering/: denoising_and_optimization.py  integral_image.py
graph_cut/: graphcut_core.py  interactive_tool.py
image-alignment/: create_panorama.py  image_warping.py
pyramids/: fourier_transform.py  normalized_cross_correlation.py
shapes/: hands_test.npy  hands_train.npy  iterative_closest_point.py  rat.txt  statistical_shape_models.py
