[project]
name = "computer-vision-exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pymaxflow>=1.3.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
